Add a "Store Preview" button

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -926,6 +926,16 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="storePreviewButton">
+       <property name="text">
+        <string>Store preview</string>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pauseButton">
        <property name="text">
         <string>Pause</string>
