--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -200,9 +200,15 @@
     <addaction name="action_About"/>
     <addaction name="action_AboutQt"/>
    </widget>
+   <widget class="QMenu" name="menu_View">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuF_ractal"/>
    <addaction name="menu_Colouring"/>
+   <addaction name="menu_View"/>
    <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
