--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -131,17 +131,23 @@
      <property name="title">
       <string>&amp;Formula</string>
      </property>
+     <widget class="QMenu" name="menuHybrid">
+      <property name="title">
+       <string>Hybrid fractal</string>
+      </property>
+      <addaction name="action_HybridOff"/>
+      <addaction name="action_HybridOn"/>
+     </widget>
      <addaction name="action_FormulaStandard"/>
      <addaction name="action_FormulaLambda"/>
      <addaction name="action_FormulaSpider"/>
      <addaction name="action_FormulaTricorn"/>
      <addaction name="action_FormulaShip"/>
-     <addaction name="action_FormulaShip1"/>
-     <addaction name="action_FormulaShip2"/>
      <addaction name="action_FormulaMix"/>
      <addaction name="action_FormulaSqTwiceA"/>
      <addaction name="action_FormulaSqTwiceB"/>
      <addaction name="action_FormulaTest"/>
+     <addaction name="menuHybrid"/>
     </widget>
     <widget class="QMenu" name="menuPower">
      <property name="title">
@@ -1620,28 +1626,6 @@
     <string>Testing</string>
    </property>
   </action>
-  <action name="action_FormulaShip1">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>Burning Ship variant 1</string>
-   </property>
-   <property name="toolTip">
-    <string>Burning Ship variant 1</string>
-   </property>
-  </action>
-  <action name="action_FormulaShip2">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>Burning Ship variant 2</string>
-   </property>
-   <property name="toolTip">
-    <string>Burning Ship variant 2</string>
-   </property>
-  </action>
   <action name="action_Rotate0">
    <property name="text">
     <string>Clear rotation</string>
@@ -1704,6 +1688,25 @@
    </property>
    <property name="toolTip">
     <string>Set to 100</string>
+   </property>
+  </action>
+  <action name="action_HybridOff">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Off</string>
+   </property>
+  </action>
+  <action name="action_HybridOn">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>On</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+H</string>
    </property>
   </action>
  </widget>
