--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -221,10 +221,21 @@
      <addaction name="action_Shift10"/>
      <addaction name="action_Shift100"/>
     </widget>
+    <widget class="QMenu" name="menuDEM">
+     <property name="title">
+      <string>Use DEM for</string>
+     </property>
+     <addaction name="action_DEMOff"/>
+     <addaction name="action_DEMDist"/>
+     <addaction name="action_DEMShading"/>
+     <addaction name="action_DEMBoth"/>
+    </widget>
     <addaction name="menuNarrow_black_white"/>
     <addaction name="menuStructure_modifier"/>
     <addaction name="menuColour_rotation"/>
     <addaction name="menuShift_minimum"/>
+    <addaction name="menuDEM"/>
+    <addaction name="action_DEMColour"/>
     <addaction name="action_EAngle"/>
     <addaction name="separator"/>
     <addaction name="action_GradEditor"/>
@@ -686,20 +697,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QGroupBox" name="demBox">
+      <widget class="QGroupBox" name="DEMGroup">
        <property name="title">
         <string>DEM</string>
        </property>
-       <property name="checkable">
-        <bool>true</bool>
-       </property>
-       <property name="checked">
-        <bool>false</bool>
-       </property>
-       <layout class="QVBoxLayout" name="verticalLayout_9">
-        <property name="spacing">
-         <number>2</number>
-        </property>
+       <layout class="QGridLayout" name="gridLayout_2">
         <property name="leftMargin">
          <number>0</number>
         </property>
@@ -712,48 +714,65 @@
         <property name="bottomMargin">
          <number>0</number>
         </property>
-        <item>
-         <widget class="QWidget" name="widget_7" native="true">
-          <layout class="QHBoxLayout" name="horizontalLayout_11">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLabel" name="label_4">
-             <property name="text">
-              <string>Width</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QDoubleSpinBox" name="demParamSpinBox">
-             <property name="decimals">
-              <number>1</number>
-             </property>
-             <property name="minimum">
-              <double>0.100000000000000</double>
-             </property>
-             <property name="maximum">
-              <double>2.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.500000000000000</double>
-             </property>
-             <property name="value">
-              <double>1.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-          </layout>
+        <property name="spacing">
+         <number>2</number>
+        </property>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Strength</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QDoubleSpinBox" name="demParamSpinBox">
+          <property name="toolTip">
+           <string>&lt;p&gt;The parameter to use when distance estimation is enabled.&lt;/p&gt;&lt;p&gt;Lower values reduce the minimum distance before a pixel is determined to be near the set, leading to thinner-looking pictures.&lt;/p&gt;</string>
+          </property>
+          <property name="decimals">
+           <number>2</number>
+          </property>
+          <property name="minimum">
+           <double>0.010000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>9.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+          <property name="value">
+           <double>1.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QDoubleSpinBox" name="demStrengthSpinBox">
+          <property name="toolTip">
+           <string>&lt;p&gt;The parameter to use when distance estimation is enabled.&lt;/p&gt;&lt;p&gt;Lower values reduce the minimum distance before a pixel is determined to be near the set, leading to thinner-looking pictures.&lt;/p&gt;</string>
+          </property>
+          <property name="decimals">
+           <number>2</number>
+          </property>
+          <property name="minimum">
+           <double>0.010000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>1.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+          <property name="value">
+           <double>1.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Width</string>
+          </property>
          </widget>
         </item>
        </layout>
@@ -1719,6 +1738,46 @@
    </property>
    <property name="toolTip">
     <string>Celtic</string>
+   </property>
+  </action>
+  <action name="action_DEMOff">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Nothing</string>
+   </property>
+  </action>
+  <action name="action_DEMDist">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Distance</string>
+   </property>
+  </action>
+  <action name="action_DEMShading">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Shading</string>
+   </property>
+  </action>
+  <action name="action_DEMBoth">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Both</string>
+   </property>
+  </action>
+  <action name="action_DEMColour">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Use color with DEM</string>
    </property>
   </action>
  </widget>
