--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -663,16 +663,11 @@
         <item>
          <widget class="QComboBox" name="modifyComboBox">
           <property name="currentIndex">
-           <number>2</number>
+           <number>1</number>
           </property>
           <item>
            <property name="text">
             <string>Normal</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Log</string>
            </property>
           </item>
           <item>
@@ -688,6 +683,21 @@
           <item>
            <property name="text">
             <string>4th root</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Log</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Log sqrt</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Log log</string>
            </property>
           </item>
          </widget>
