--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -147,6 +147,7 @@
      <addaction name="action_FormulaMix"/>
      <addaction name="action_FormulaSqTwiceA"/>
      <addaction name="action_FormulaSqTwiceB"/>
+     <addaction name="action_FormulaMagnetA"/>
      <addaction name="action_FormulaTest"/>
      <addaction name="menuHybrid"/>
     </widget>
@@ -1706,6 +1707,9 @@
    </property>
   </action>
   <action name="action_FormulaTest">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Testing</string>
    </property>
@@ -1848,6 +1852,17 @@
    </property>
    <property name="text">
     <string>Use color with DEM</string>
+   </property>
+  </action>
+  <action name="action_FormulaMagnetA">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Magnet A</string>
+   </property>
+   <property name="toolTip">
+    <string>Magnet A</string>
    </property>
   </action>
  </widget>
