--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -148,6 +148,7 @@
      <addaction name="action_FormulaSqTwiceA"/>
      <addaction name="action_FormulaSqTwiceB"/>
      <addaction name="action_FormulaMagnetA"/>
+     <addaction name="action_FormulaFacing"/>
      <addaction name="action_FormulaTest"/>
      <addaction name="menuHybrid"/>
     </widget>
@@ -1863,6 +1864,17 @@
    </property>
    <property name="toolTip">
     <string>Magnet A</string>
+   </property>
+  </action>
+  <action name="action_FormulaFacing">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Rational Facing (&quot;Zazbcgd&quot;)</string>
+   </property>
+   <property name="toolTip">
+    <string>Rational Facing</string>
    </property>
   </action>
  </widget>
